@@ -1,3 +1,7 @@
+2007-05-18  Paul Brook  <paul@codesourcery.com>
+
+	* ld-arm/arm-call.d: Update expected output.
+
 2007-05-17  Paul Brook  <paul@codesourcery.com>
 
 	* ld-elf/multibss1.s: Use %nobits instead of @nobits.
